--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,7 +10,7 @@ add_swig_python_module(inverterWrapperPython inverter_wrapper.i
                        DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/pyinverter)
 add_swig_python_module(lutWrapperPython lut_wrapper.i
                        CPLUSPLUS
-                       INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../src
+                       INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../src/mithral ${CMAKE_CURRENT_SOURCE_DIR}/../src/mithral/utils ${CMAKE_CURRENT_SOURCE_DIR}/../src/mithral/external/eigen/Eigen
                        SWIG_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../swigmake/swig/python ${CMAKE_CURRENT_SOURCE_DIR}/../swigmake/swig/common
                        DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/lutmatmul)
 # If we wanted to, we could copy all the python source files to an install directory like /usr/local/lib/python2.7/site-packages
